--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@
 
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
-logging.level.org.springframework = debug
+#logging.level.org.springframework = debug
 
 spring.mvc.format.date=yyyy-MM-dd
