--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.mvc.format.date=yyyy-MM-dd
 
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.h2.console.enabled=true
+spring.jpa.defer-datasource-initialization=true
